
Version 2.0.3
 * upload_store directive was not able to receive more than one argument.
   As a result no hashed dirs for file uploads were possible.
 * upload_store_access directive did not work completely.
   Thanks to Brian Moran.
 * In case of any errors at the last chunk of request body only 500 Internal Server Error
   was generated intead of 400 Bad Request and 503 Service Unavailable.
 * Fixed copyrights for temporary file name generation code
 * Fixed compilation issue on 0.6.32. Thanks to Tomas Pollak.

Version 2.0.2
 * Fixed crash in logging filename while aborting upload
 * Added feasible debug logging
 * Added support for variables to generate form fields
   in resulting request body
 * Added missing logging of errno after write failures
 * Simplified upload abortion logic; simply discarding
   already added fields
 * Now returning explicit error code after script failures
   to be able to generate Internal server error