@@ -8,6 +8,8 @@ Version 2.0.3
    was generated intead of 400 Bad Request and 503 Service Unavailable.
  * Fixed copyrights for temporary file name generation code
  * Fixed compilation issue on 0.6.32. Thanks to Tomas Pollak.
+ * Added directive upload_pass_form_field to specify fields
+   to pass to backend. Fixes security hole found by Brian Moran.
 
 Version 2.0.2
  * Fixed crash in logging filename while aborting upload
